# dabl

./: .bumpversion.cfg  .gitignore  .travis.yml  CHANGELOG  LICENSE  MAINTAINING.md  MANIFEST.in  OpenmlDatasetDemo.ipynb  OpenmlRegressionDatasets.ipynb  README.md  RegressionDatasets.ipynb  appveyor.yml  circle.yml  class_hist_demo.ipynb  demo.ipynb  demo.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  testing.ipynb  testing.py  todo.txt
.circleci/: config.yml
.github/workflows/: ci.yml  python-publish.yml
.ipynb_checkpoints/: testing-checkpoint.ipynb
benchmarks/: search_20_news.py  search_20_news_randomized.py  search_svm.py
ci_scripts/circle/: build_doc.sh  flake8_diff.sh  list_versions.py  push_doc.sh
ci_scripts/travis/: install.sh  test.sh
dabl/: __init__.py  _available_if.py  _config.py  _plot_tree.py  _reingold_tilford.py  _resample.py  _search.py  debugging.ipynb  explain.py  models.py  pipelines.py  plotting.py  preprocessing.py  search.py  todo  utils.py
dabl/datasets/: __init__.py  adult.csv  ames_housing.pkl.bz2
dabl/datasets/tests/: test_datasets.py
dabl/plot/: __init__.py  quality_measures.py  sankey.py  supervised.py  utils.py
dabl/plot/tests/: test_quality_metrics.py  test_supervised.py  test_utils.py
dabl/portfolios/: portfolio_base.py  portfolio_hgb.py  portfolio_lr.py  portfolio_mixed.py  portfolio_rf.py  portfolio_svc.py
dabl/tests/: test_available_if.py  test_common.py  test_explain.py  test_models.py  test_plots.py  test_preprocessing.py  test_search.py  test_utils.py
doc/: Makefile  api.rst  changes.rst  concepts_term.rst  conf.py  data_cleaning.rst  index.rst  quick_start.rst  successive_halving.rst  user_guide.rst
doc/_static/css/: project-template.css
doc/sphinxext/: sphinx_issues.py
examples/: explain_example.py  plot_adult.py  plot_ames.py  plot_boston.py  plot_classifier.py  plot_explain_example.py  plot_successive_halving_heatmap.py  plot_successive_halving_iterations.py  plot_successive_heatmap_comparison_grid_search.py  plot_template.py  plot_test.py  plot_transformer.py  plot_wine.py
examples/plot/: README.txt  plot_adult.py  plot_adult_sankey.py  plot_ames.py  plot_categorical_types_adult.py  plot_class_hists.py  plot_diabetes.py  plot_diamonds.py  plot_discrete_scatter.py  plot_human_activity.py  plot_mfeat_factors.py  plot_mosaic.py  plot_splice.py  plot_wine.py
fml/: __init__.py  models.py  plotting.py  preprocessing.py  search.py
fml/tests/: test_common.py  test_models.py  test_plots.py  test_preprocessing.py  test_search.py
notebooks/: OpenmlDatasetDemo.ipynb  README.md
scripts/: README.md  check_build.sh  create_update_conda_envs.sh  run_checks.sh  run_tests.sh  update-version.sh
skltemplate/: __init__.py  template.py
skltemplate/tests/: test_common.py  test_template.py
