[build-system]
requires = ["setuptools>64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dabl"
description = "Data Analysis Baseline Library"
keywords = [
    "data analysis",
    "visualization",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
]
license = { "file" = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Andreas Mueller", email = "t3kcit+githubspam@gmail.com" },
]
maintainers = [
    { name = "Andreas Mueller", email = "t3kcit+githubspam@gmail.com" },
    { name = "Brian Kroth", email = "bpkroth+githubspam@gmail.com" },
]
requires-python = ">=3.8"
dependencies = [
    "packaging",

    "numpy",
    "scipy",
    "scikit-learn>=1.1",

    # Workaround (currently) undeclared numpy 2.x incompatibility with older
    # scikit-learn versions.
    # See Also: https://github.com/scikit-learn/scikit-learn/issues/29630
    "numpy<2.0; python_version<'3.9'",
    "scikit-learn<1.4; python_version<'3.9'",
    "scikit-learn>=1.3; python_version>='3.9'",

    "pandas",
    "matplotlib < 3.8;python_version<'3.9'",
    "matplotlib >= 3.8;python_version>='3.9'",
    "seaborn",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "dabl.__version__"}

[project.urls]
Documentation = "https://dabl.github.io/"
Repository = "https://github.com/dabl/dabl"
Issues = "https://github.com/dabl/dabl/issues"

# Tell setuptools where to find the package.
[tool.setuptools.package-dir]
dabl = "dabl"

[tool.setuptools.packages.find]
include = ["dabl", "dabl.*"]
exclude = ["*.tests", "*.tests.*"]

[tool.setuptools.package-data]
dabl = [
    "datasets/titanic.csv",
    "datasets/ames_housing.pkl.bz2",
    "datasets/adult.csv.gz",
]
