[metadata]
description-file = README.md

[aliases]
# python2.7 has upgraded unittest and it is no longer compatible with some
# of our tests, so we run all through nose
test = pytest


[tool:pytest]
# disable-pytest-warnings should be removed once we rewrite tests
# using yield with parametrize
addopts =
    --ignore doc
    --ignore examples
    --doctest-modules
    -rs

filterwarnings =
    ignore:the matrix subclass:PendingDeprecationWarning
doctest_optionflags= NORMALIZE_WHITESPACE 

[flake8]
# Default flake8 3.5 ignored flags
ignore=E121,E123,E126,E226,E24,E704,W503,W504
